--- a/src/components/repositorylist/RepositoryList.css
+++ b/src/components/repositorylist/RepositoryList.css
@@ -1,11 +1,29 @@
 .card {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
   
   .card-title {
     font-weight: bold;
+    font-size: 1.2em;
   }
   
   .card-text {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
+    font-size: 1em;
   }
+  
+  @media (min-width: 768px) {
+    .card {
+      margin-bottom: 10px;
+    }
+  
+    .card-title {
+      font-size: 1em;
+    }
+  
+    .card-text {
+      margin-bottom: 5px;
+      font-size: 0.875em;
+    }
+  }
+  
