--- a/src/components/repositorylist/RepositoryList.css
+++ b/src/components/repositorylist/RepositoryList.css
@@ -1,29 +1,59 @@
 .card {
-    margin-bottom: 20px;
-  }
-  
-  .card-title {
-    font-weight: bold;
-    font-size: 1.2em;
-  }
-  
-  .card-text {
+  margin-bottom: 10px;
+  background-color: #FFFFFF;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.card-title {
+  font-weight: bold;
+}
+
+.card-text {
+  margin-bottom: 5px;
+}
+
+.btn-primary {
+  background-color: #00BFFF;
+  color: #FFFFFF;
+}
+
+.btn-custom-primary {
+  background-color: #00BFFF;
+  color: #FFFFFF;
+}
+
+.btn-custom-primary:hover {
+  background-color: #008FB3;
+}
+
+.btn-custom-danger {
+  background-color: #FF6347;
+  color: #FFFFFF;
+}
+
+.btn-custom-danger:hover {
+  background-color: #B34735;
+}
+
+a {
+  color: #4682B4;
+}
+
+a:hover {
+  color: #1B5573;
+}
+
+@media (min-width: 768px) {
+  .card {
     margin-bottom: 10px;
+  }
+
+  .card-title {
     font-size: 1em;
   }
-  
-  @media (min-width: 768px) {
-    .card {
-      margin-bottom: 10px;
-    }
-  
-    .card-title {
-      font-size: 1em;
-    }
-  
-    .card-text {
-      margin-bottom: 5px;
-      font-size: 0.875em;
-    }
+
+  .card-text {
+    margin-bottom: 5px;
+    font-size: 0.875em;
   }
-  
+}
