--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,7 +1,6 @@
 body {
-    height: 100%;
-    background-color: #F5F5F5 !important;
-    color: #696969 !important;
+    background-color:aliceblue !important;
+    color: black !important;
 }
 
 .home-page {
